Fix contrast issues in code examples

--- a/css/code-dark.css
+++ b/css/code-dark.css
@@ -41,7 +41,7 @@
 .token.comment,
 .token.doctype,
 .token.prolog {
-  color: #616161;
+  color: #868e99;
 }
 
 .token.deleted,
